# autogigification

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
scripts/: local_cors_proxy.py
src/: hellfest.py  important_research.ipynb  main.py  refresh_token.py  setlist.py
src/ag/: cache.py  config.py  hellfest.py  impl.py  lambda_handler.py  models.py  run.py  setlist.py
src/ag/clients/: setlist_fm.py  spotify.py
src/ag/services/: __init__.py  lineup.py  playlist_builder.py  setlist_selection.py
src/ag/utils/: __init__.py  rate_limit.py
static/: app.js  index.html  styles.css
tests/: conftest.py  test_cache.py  test_impl.py  test_lambda_handler.py  test_playlist_builder.py  test_setlist_selection.py  test_spotify_client.py
tests/integration/: test_local_lambda.py
